# allocate_gpu

./: .gitignore  AGENTS.md  README.md  pixi.toml  pyproject.toml
gpu_alloc/: __init__.py  __main__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
